--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -2,6 +2,9 @@
     <h2>编辑讨论版</h2>
 
     <hr>
+
+    <%= render "form" %>
+  </div>
     <%= form_for @group do |f| %>
     <% if @group.errors.any? %>
     <ul>
@@ -9,7 +12,7 @@
         <li><%= msg %></li>
       <% end %>
     </ul>
-    <% end %>  
+    <% end %>
     标题
     <%= f.text_field :title %>
     <br>
