--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -2,6 +2,10 @@
     <h2>新增讨论版</h2>
 
     <hr>
+
+    <%= render "form" %>
+
+</div>    
     <%= form_for @group do |f| %>
     <% if @group.errors.any? %>
     <ul>
